--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
 # defaults file for ansible_role_sshd-agent
+ssh_users:
+  - name: ansible
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_rsa.pub') }}"
+  - name: defaultadmin
+    key: "{{ lookup('file', 'roles/authorized_keys/vars/defaultadmin.pub') }}"
