--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
-# tasks file for ansible_role_sshd-agent
+# https://docs.ansible.com/ansible/latest/collections/ansible/posix/authorized_key_module.html#authorized-key-adds-or-removes-an-ssh-authorized-key
+- name: Deploy ssh-keys to remote host
+  authorized_key:
+    user: "{{ item.name }}"
+    key: "{{ item.key }}"
+    state: present
+  with_items: ssh_users
